# phros_remote

./: .clang-format  CMakeLists.txt  Readme.me  package.xml  plugin_phros_remote.xml  plugin_remote.xml
config/: flipper_presets.yaml  remote.perspective
launch/: example.launch
src/: Communication.cpp  Communication.h  MapperController.cpp  MapperController.h  MenuTest.cpp  MenuTest.h  RemotePlugin.cpp  RemotePlugin.h  ThreadRos.cpp  ThreadRos.h  menu_test.cpp
src/gui/: DialogWarningArmReset.cpp  DialogWarningArmReset.h  Hud.cpp  Hud.h  PerspectiveModel.cpp  PerspectiveModel.h  WidgetMain.cpp  WidgetMain.h  dialog_warning_armreset.ui  main.ui
src/gui/icons/: qt_res.qrc
src/gui/menu/: IMenuItem.h  Menu.cpp  Menu.h  MenuItemArmInitialIdle.cpp  MenuItemArmInitialIdle.h  MenuItemArmInitialLookDown.cpp  MenuItemArmInitialLookDown.h  MenuItemArmInitialLookSide.cpp  MenuItemArmInitialLookSide.h  MenuItemArmInitialLookUp.cpp  MenuItemArmInitialLookUp.h  MenuItemArmInitialLowered.cpp  MenuItemArmInitialLowered.h  MenuItemBase.cpp  MenuItemBase.h  MenuItemFlipperAscent.cpp  MenuItemFlipperAscent.h  MenuItemFlipperBase.cpp  MenuItemFlipperBase.h  MenuItemFlipperDescent.cpp  MenuItemFlipperDescent.h  MenuItemFlipperFlat.cpp  MenuItemFlipperFlat.h  MenuItemFlipperUp4.cpp  MenuItemFlipperUp4.h  MenuItemModeArm.cpp  MenuItemModeArm.h  MenuItemModeDrive.cpp  MenuItemModeDrive.h  MenuItemModeDriveReverse.cpp  MenuItemModeDriveReverse.h  MenuItemModeInspect.cpp  MenuItemModeInspect.h
src/mappers/: IMapper.h  MapperArm.cpp  MapperArm.h  MapperBase.cpp  MapperBase.h  MapperDrive.cpp  MapperDrive.h  MapperDriveReverse.cpp  MapperDriveReverse.h  MapperHud.cpp  MapperHud.h  MapperInspect.cpp  MapperInspect.h  Ps3Profiles.h  PsProfiles.h
src/ringbuffer/: ItemRingBuffer.h
src/utils/: MapperPs3Pad.cpp  MapperPs3Pad.h  MapperPs4Pad.cpp  MapperPs4Pad.h  MapperPsPad.cpp  MapperPsPad.h  MapperPsPadSing.cpp  MapperPsPadSing.h  StateButton.cpp  StateButton.h  SuperImageSubscriber.cpp  SuperImageSubscriber.h  SuperSubscriber.h
